# AndroidMFCC

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/android_mfcc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NEON_2_SSE.h  logging_macros.h  mfcc_impl01.cpp
app/src/main/java/com/example/android_mfcc/: AudioChunkAggregator.java  AudioReceiver.java  AudioReceiverListener.java  DCTJava.java  FFT512Java.java  HammingWindowJava.java  MFCCCPP.java  MFCCInterface.java  MFCCJava.java  MainActivity.java  MelFilterBanksJava.java  ScrollingHeatMapView.java  TopLevelMFCCProcessor.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/android_mfcc/: ExampleUnitTest.java
doc/: performance.numbers
gradle/wrapper/: gradle-wrapper.properties
